--- a/www/style.css
+++ b/www/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 #grossebox {
-    width: auto;
+    width: 100%;
     background-color: lightblue;
     height: 100%;
     padding-bottom: 50px;
@@ -65,6 +65,7 @@ body {
 }
 
 #kleinebox {
+	height: 20%;
     background-color: pink;
     width: 50%;
     margin: 0 auto;
@@ -73,23 +74,28 @@ body {
 
 .themenfeld {
     border: 4px solid grey;
-    padding: 30px;
+/*    padding: 30px;*/
     float: left;
-    margin-right: 10%;
-    width: 10%;
+/*    margin-right: 10%;*/
+/*	margin: 0 auto;*/
+	box-sizing: border-box;
+	height: 3em;
+	padding: 1em;
+    width: 33.33%;
     background-color: lightgrey;
     text-align: center;
     font-size: 25px;
     font-family: "Times New Roman", Times, serif;
-
+	
 }
 
 #themenfeldbox{
     width: 100%;
-    margin-left: 20%;
-    margin-top: 9.3%;
+/*    margin-left: 20%;*/
+/*    margin-top: 9.3%;*/
 
 }
+
 #window2 {
     width: 100%;
     height: 100%;
