--- a/www/style.css
+++ b/www/style.css
@@ -74,26 +74,26 @@ body {
 
 .themenfeld {
     border: 4px solid grey;
-/*    padding: 30px;*/
     float: left;
-/*    margin-right: 10%;*/
-/*	margin: 0 auto;*/
 	box-sizing: border-box;
 	height: 3em;
-	padding: 1em;
+	line-height: 2.75em;
     width: 33.33%;
     background-color: lightgrey;
     text-align: center;
     font-size: 25px;
     font-family: "Times New Roman", Times, serif;
-	
+}
+
+.themenfeld div {
+	max-width: 80%;
+	border: 3px solid black;
+	margin: 0 auto;
+	word-wrap: break-word;
 }
 
 #themenfeldbox{
     width: 100%;
-/*    margin-left: 20%;*/
-/*    margin-top: 9.3%;*/
-
 }
 
 #window2 {
@@ -106,15 +106,29 @@ body {
 #textfeld2 {
     background-color: #ffff66;
     width: 80%;
-    padding: 80px;
-    margin: 40px;
-    height: 40%;
-
+	margin: 0 auto;
+	margin-top: 10%;
+	margin-bottom: 10%;
+    min-height: 30%;
+	border: 3px solid black;
 }
 
 #text2 {
     color: grey;
     text-align: center;
-    font-size: 40px;
+    font-size: 1.5em;
     font-family: "Times New Roman", Times, serif;
+}
+
+@media (max-width: 721px) {
+	.themenfeld {
+		float: none;
+		width: 80%;
+		margin: 0 auto;
+		height: 4em;
+	}
+
+	.themenfeld div {
+		height: 3em;
+	}
 }
