--- a/www/style.css
+++ b/www/style.css
@@ -133,7 +133,27 @@ body {
 	}
 }
 
-@media (max-width: 800px) {
+.themenfeldzweitereihe {
+    border: 4px solid grey;
+    float: left;
+	box-sizing: border-box;
+	height: 3em;
+	line-height: 2.75em;
+    width: 33.33%;
+    background-color: lightgrey;
+    text-align: center;
+    font-size: 25px;
+    font-family: "Times New Roman", Times, serif;
+}
+
+.themenfeldzweitereihe div {
+	max-width: 80%;
+	border: 3px solid black;
+	margin: 0 auto;
+	word-wrap: break-word;
+}
+
+@media (max-width: 721px) {
 	.themenfeldzweitereihe {
 		float: none;
 		width: 80%;
@@ -141,7 +161,7 @@ body {
 		height: 4em;
 	}
 
-	.themenfeldzweitereihe div {
+	.themenfeld div {
 		height: 3em;
 	}
 }
