--- a/www/style.css
+++ b/www/style.css
@@ -161,7 +161,40 @@ body {
 		height: 4em;
 	}
 
-	.themenfeld div {
+	.themenfeldzweitereihe div {
+		height: 3em;
+	}
+}
+
+.themenfelddrittereihe {
+    border: 4px solid grey;
+    float: left;
+	box-sizing: border-box;
+	height: 3em;
+	line-height: 2.75em;
+    width: 33.33%;
+    background-color: lightgrey;
+    text-align: center;
+    font-size: 25px;
+    font-family: "Times New Roman", Times, serif;
+}
+
+.themenfelddrittereihe div {
+	max-width: 80%;
+	border: 3px solid black;
+	margin: 0 auto;
+	word-wrap: break-word;
+}
+
+@media (max-width: 721px) {
+	.themenfelddrittereihe {
+		float: none;
+		width: 80%;
+		margin: 0 auto;
+		height: 4em;
+	}
+
+	.themenfelddrittereihe div {
 		height: 3em;
 	}
 }
