--- a/www/style.css
+++ b/www/style.css
@@ -9,12 +9,48 @@ body {
 
 #menue {
 	width: 100%;
-	height: 4%;
+	min-height: 2.5em;
 	background: #F0F0F0;
 }
 
+.popup {
+	cursor: pointer;
+	position: relative;
+	top: 0.25em;
+	height: 2em;
+	line-height: 1.75em;
+	border: 2px solid #080;
+	border-radius: 5px;
+	width: 5em;
+	box-sizing: border-box;
+	left: 0.4em;
+	background: #0A0;
+	color: #FFF;
+	font-family: sans;
+	font-weight: bold;
+	text-align: center;
+}
+
+.popup_content {
+	visibility: hidden;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	width: 25%;
+	height: 25%;
+	margin-left: -12.5%;
+	margin-top: -12.5%;
+	background: #FFF;
+	color: #000;
+	text-align: center;
+}
+
+.popup .show {
+	visibility: visible;
+}
+
 .menue_eintrag {
-	height: 100%;
+	min-height: 2em;
 	padding: 0.5em 1em 0em 1em;
 	float: left;
 	background: inherit;
@@ -27,6 +63,30 @@ body {
 .menue_eintrag:hover {
 	color: #E0E0E0;
 	background: #505050;
+}
+
+.dropdown {
+	display: none;
+	width: 110%;
+}
+
+.dropdown div {
+	height: 2em;
+	width: 100%;
+	border: 1px solid red;
+}
+
+.dropdown div:first-child {
+	margin-top: 1em;
+}
+
+.menue_eintrag:hover .dropdown {
+	display: block;
+}
+
+.dropdown div:hover {
+	background: #F0F0F0;
+	color: #505050;
 }
 
 #menue_text {
@@ -98,7 +158,7 @@ body {
 
 #window2 {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     border: 2px solid #ffff66;
     background-color: #ffff66;
 }
@@ -130,5 +190,9 @@ body {
 
 	.themenfeld div {
 		height: 3em;
+	}
+
+	.menue {
+		min-height: 4em;
 	}
 }
