--- a/www/style.css
+++ b/www/style.css
@@ -9,11 +9,11 @@ body {
 
 #menue {
 	width: 100%;
-	min-height: 2.5em;
-	background: #F0F0F0;
+	height: 2.5em;
+	background: #FFF;
 }
 
-.popup {
+#popup_button {
 	cursor: pointer;
 	position: relative;
 	top: 0.25em;
@@ -43,60 +43,64 @@ body {
 	background: #FFF;
 	color: #000;
 	text-align: center;
+	border-radius: 7px;
 }
 
-.popup .show {
+.show {
 	visibility: visible;
 }
 
-.menue_eintrag {
-	min-height: 2em;
-	padding: 0.5em 1em 0em 1em;
-	float: left;
-	background: inherit;
-	color: #505050;
-	font-family: sans;
-	font-size: 1em;
-	box-sizing: border-box;
+#popup_header {
+	height: 2em;
 }
 
-.menue_eintrag:hover {
-	color: #E0E0E0;
-	background: #505050;
+#popup_close_button {
+	cursor: pointer;
+	background: #F00;
+	width: 5em;
+	position: absolute;
+	right: 0px;
+	box-sizing: border-box;
+	border-bottom-left-radius: 7px;
+	font-family: sans;
+	color: white;
+	font-size: 14px;
+	padding-top: 0.25em;
+	text-align: center;
 }
+
 
 .dropdown {
-	display: none;
-	width: 110%;
-}
-
-.dropdown div {
+	position: relative;
+	cursor: pointer;
+	top: -1.75em;
+	left: 6em;
 	height: 2em;
-	width: 100%;
-	border: 1px solid red;
+	width: 4em;
+	font-family: sans;
+	line-height: 2.25em;
 }
 
-.dropdown div:first-child {
-	margin-top: 1em;
+.dropdown_text {
+	position: relative;
+	left: 0.5em;
 }
 
-.menue_eintrag:hover .dropdown {
-	display: block;
+.undecorated_link {
+	text-decoration: none;
+	color: inherit;
 }
 
-.dropdown div:hover {
-	background: #F0F0F0;
-	color: #505050;
+.dropdown_content {
+	visibility: hidden;
+	position:relative;
+	top: -1px;
+	min-width: 10em;
+	background: #FFF;
 }
 
-#menue_text {
-	float: left;
-	margin-left: 5em;
-	color: #909000;
-	font-style: italic;
-	font-family: serif;
-	font-size: 1.5em;
-	padding-top: 0.2em;
+.dropdown .show {
+	visibility: visible;
 }
 
 #grossebox {
