--- a/www/style.css
+++ b/www/style.css
@@ -223,6 +223,7 @@ margin-right: 200px;
     text-align: center;
     font-size: 25px;
     font-family: "Times New Roman", Times, serif;
+    margin-right: 10%;
 }
 
 .themenfeldzweitereihe div {
