--- a/www/style.css
+++ b/www/style.css
@@ -258,6 +258,8 @@ margin-right: 200px;
     text-align: center;
     font-size: 25px;
     font-family: "Times New Roman", Times, serif;
+    margin-right: 4%;
+    margin-top: 2%;
 }
 
 .themenfelddrittereihe div {
