--- a/www/style.css
+++ b/www/style.css
@@ -162,6 +162,8 @@ margin-right: 200px;
     text-align: center;
     font-size: 25px;
     font-family: "Times New Roman", Times, serif;
+    margin-right: 4%;
+    margin-top: 2%;
 }
 
 .themenfeld div {
@@ -169,6 +171,8 @@ margin-right: 200px;
     border: 3px solid black;
     margin: 0 auto;
     word-wrap: break-word;
+    margin-right: 4%;
+    margin-top: 2%;
 }
 
 #themenfeldbox{
