--- a/www/style.css
+++ b/www/style.css
@@ -229,6 +229,7 @@ margin-right: 200px;
     font-family: "Times New Roman", Times, serif;
     margin-right: 4%;
     margin-top: 2%;
+    margin-left: 2%
 }
 
 .themenfeldzweitereihe div {
