--- a/www/style.css
+++ b/www/style.css
@@ -164,6 +164,7 @@ margin-right: 200px;
     font-family: "Times New Roman", Times, serif;
     margin-right: 4%;
     margin-top: 2%;
+    margin-left: 2%
 }
 
 .themenfeld div {
@@ -265,6 +266,7 @@ margin-right: 200px;
     font-family: "Times New Roman", Times, serif;
     margin-right: 4%;
     margin-top: 2%;
+    margin-left: 2%
 }
 
 .themenfelddrittereihe div {
