--- a/www/style.css
+++ b/www/style.css
@@ -1,4 +1,5 @@
 @import "navBar.css";
+@import "slideShow.css";
 
 html {
     scroll-behavior: smooth;
@@ -22,24 +23,12 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 55%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 #Hintergrund1 {
     width: 100%;
-    background-color: lightblue;
+    background-color: d9b6b4;
     height: 100%;
     padding-bottom: 50px;
 }
@@ -50,7 +39,7 @@ margin-left: 670px;
 margin-right: 200px;
 }*/
 
-.headline1 {
+.headline {
     color: white;
     text-shadow: 2px 2px 5px black;
     font-size: 6vw;
@@ -99,11 +88,12 @@ margin-right: 200px;
 
 #themenfeldbox{
     width: 100%;
+    background-color: aqua;
 }
 
 #window2 {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     border: 2px solid #ffff66;
     background-color: #ffff66;
 }
