--- a/Meditation/Meditation.css
+++ b/Meditation/Meditation.css
@@ -9,3 +9,17 @@ body {
     margin: 0;
     padding: 0;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 64%;
+}
+.headline {
+    color: black;
+    text-shadow: 2px 2px 5px black;
+    font-size: 6vw;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
