--- a/Mathematik/Mathematik.css
+++ b/Mathematik/Mathematik.css
@@ -1,5 +1,4 @@
-@import "../www/navBar.css";
-@import "../www/slideShow.css";
+@import "../html-snippets/navBar/navBar.css";
 
 html {
     scroll-behavior: smooth;
