--- a/Meditation/Meditation.css
+++ b/Meditation/Meditation.css
@@ -1,5 +1,5 @@
 @import "../html-snippets/navBar/navBar.css";
-@import "../www/slideShow.css";
+@import "../html-snippets/slideShow/slideShow.css";
 
 html {
     scroll-behavior: smooth;
@@ -9,12 +9,14 @@ body {
     margin: 0;
     padding: 0;
 }
+
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 64%;
 }
+
 .headline {
     color: black;
     text-shadow: 2px 2px 5px black;
