--- a/Meditation/Meditation.css
+++ b/Meditation/Meditation.css
@@ -12,10 +12,10 @@ body {
 }
 
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 64%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 64%;
 }
 
 .headline {
@@ -23,6 +23,30 @@ body {
     text-shadow: 2px 2px 5px black;
     font-size: 6vw;
     text-align: center;
-    padding: 0;
+    padding-bottom: 50;
     margin: 0;
 }
+
+#imgContainer {
+    padding-top: 50px;
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+        display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+
