--- a/Sketching/Sketching.css
+++ b/Sketching/Sketching.css
@@ -8,3 +8,17 @@ body {
     margin: 0;
     padding: 0;
 }
+
+#canvas {
+    position: relative;
+}
+
+#thickness {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+
+    width: 30;
+    height: 30;
+    border: 1px solid black;
+}
