--- a/html-snippets/slideShow/slideShow.css
+++ b/html-snippets/slideShow/slideShow.css
@@ -6,12 +6,14 @@
     position: relative;
     margin: auto;
     width: 90%;
+    scroll-behavior: none;
 }
 
 /* Hide the images by default */
 .mySlides {
     display: none;
     text-align: center;
+    scroll-behavior: none;
 }
 
 /* Next & previous buttons */
