--- a/Startseite/Startseite.css
+++ b/Startseite/Startseite.css
@@ -1,6 +1,6 @@
 @import "../html-snippets/navBar/navBar.css";
 @import "../html-snippets/slideShow/slideShow.css";
-@import "./Buttons/Buttons.css";
+@import "./test.css";
 
 html {
     scroll-behavior: smooth;
@@ -85,168 +85,4 @@ img {
     color: white;
     font-size: 2vw;
 }
-@mixin responsive-font($responsive, $min, $max: false, $fallback: false) {
-  $responsive-unitless: $responsive / ($responsive - $responsive + 1);
-  $dimension: if(unit($responsive) == 'vh', 'height', 'width');
-  $min-breakpoint: $min / $responsive-unitless * 100;
 
-  @media (max-#{$dimension}: #{$min-breakpoint}) {
-    font-size: $min;
-  }
-
-  @if $max {
-    $max-breakpoint: $max / $responsive-unitless * 100;
-
-    @media (min-#{$dimension}: #{$max-breakpoint}) {
-      font-size: $max;
-    }
-  }
-
-  @if $fallback {
-    font-size: $fallback;
-  }
-
-  font-size: $responsive;
-}
-
-body{
-  background-color:#cbf7ff;
-}
-
-.button-group{
-  width:50%;
-  min-width:600px;
-  margin:0 auto;
-}
-
-.wrapper {
-  // border:1px solid #000;
-  margin:0 auto;
-  display: grid;
-  @include responsive-font(1.4vw, 10px, 150px, 50px);
-  grid-template-columns: 3em 3em 6em 14em 3em;
-  grid-template-rows: repeat(3, 5.85em);
-  grid-gap: 1.15em;
-  font-family:arial;
-  >*:not(.one){
-    margin:-2em 0 0 0;
-  }
-  div{
-    position: relative;
-    &.animate{
-      p:before, button:before{
-        content:"";
-        display:block;
-        border-radius:300px;
-        // padding:2.2em 0;
-        background-color: #fbd75c;
-        position: absolute;
-        top: .57em;
-        margin: 0 0 0 .24em;
-        height: 5em;
-        width: 5em;
-        z-index: -1;
-        animation: grow .8s;
-        animation-fill-mode: forwards;
-      }
-      p:hover, button:hover{
-        &:before{
-          animation: shrink .8s;
-          animation-fill-mode: forwards;
-        }
-      }
-    }
-  }
-  p, button{
-      border:.3em solid #3953aa;
-      background-color:transparent;
-      color:#3953aa;
-      font-weight:bold;
-      border-radius:300px;
-      padding:2.2em 0;
-      width: 5.5em;
-      text-align:center;
-      margin:0 auto;
-      cursor:pointer;
-      font-size:1em;
-      display:block;
-      box-sizing:inherit;
-      &:after{
-        content:"";
-        display:block;
-        border-radius:300px;
-        padding:2.2em 0;
-        background-color: #fff;
-        position: absolute;
-        top: 0;
-        margin: 0;
-        height: 1.7em;
-        width: 5.65em;
-        z-index: -2;
-      }
-    }
-    p.double, button.double{
-      padding: 1.6em 0;
-    }
-
-    .one{
-        grid-column: 1 / 5;
-        grid-row: 1;
-    }
-
-    .two{
-        grid-column: 1 / 4;
-        grid-row: 2;
-      button{
-        margin:0 0 0 40%;
-      }
-    }
-
-    .three{
-        grid-column: 3 / 5;
-        grid-row: 2;
-        button{
-          margin:0 0 0 45%;
-        }
-    }
-
-    .four{
-        grid-column: 3 / 3;
-        grid-row: 3;
-    }
-
-    .five{
-        grid-column: 3 / 5;
-        grid-row: 3;
-    }
-}
-
-@keyframes grow{
-  0%{
-    transform:translate(2.5em,2.5em);
-    height: 0em;
-    width: 0em;
-    opacity:0;
-  }
-  100%{
-    height: 5em;
-    width: 5em;
-    opacity:1;
-    transform:translate(0em,0em);
-  }
-}
-
-@keyframes shrink{
-  0%{
-    transform:translate(0em,0em);
-    height: 5em;
-    width: 5em;
-    opacity:1;
-  }
-  100%{
-    height: 0em;
-    width: 0em;
-    opacity:0;
-    transform:translate(2.5em,2.5em);
-  }
-}
