--- a/Mathematik/Zahlenreihen.css
+++ b/Mathematik/Zahlenreihen.css
@@ -21,3 +21,21 @@ h1 {
     padding: 0;
     margin: 0;
 }
+p{
+    font-size: 2vw;
+}
+span{
+
+    font-size: 2em;
+}
+
+input{
+    padding: 2px;
+    font-size: 2em;
+}
+button {
+
+    padding: 2px 2px;
+    font-size: 2em;
+
+}
