navBar dropdown dropdown

--- a/Startseite/Startseite.css
+++ b/Startseite/Startseite.css
@@ -45,7 +45,7 @@ img {
     text-shadow: 2px 2px 5px black;
     font-size: 6vw;
     text-align: center;
-    padding: 0;
+    padding-top: 2%;
     margin: 0;
 }
 
