--- a/Sketching/Sketching.css
+++ b/Sketching/Sketching.css
@@ -16,7 +16,7 @@ body {
     text-shadow: 2px 2px 5px black;
     font-size: 6vw;
     text-align: center;
-    padding: 0;
+    padding-top: 2%;
     margin: 0;
 }
 
