--- a/Mathematik/Kopfrechnen.css
+++ b/Mathematik/Kopfrechnen.css
@@ -15,14 +15,14 @@ body {
 h1 {
     color: black;
     text-shadow: 2px 2px 5px black;
-    font-size: 50px;
+    font-size: 4vw;
     text-align: center;
-    padding: 0;
+    padding-top: 2%;
     margin: 0;
 }
 
 p{
-    font-size: 20px;
+    font-size: x-large;
     text-align: justify;
 }
 
