--- a/Sketching/Sketching.css
+++ b/Sketching/Sketching.css
@@ -6,19 +6,23 @@ html {
 
 }
 
+
 body {
     margin: 0;
     padding: 0;
+    font-size: x-large;
 }
 
 .headline {
-    color: white;
+    color: black;
     text-shadow: 2px 2px 5px black;
-    font-size: 6vw;
+    font-size: 4vw;
     text-align: center;
     padding-top: 2%;
     margin: 0;
 }
+
+div{font-size: x-large;}
 
 #canvas {
     border: 1px solid black;
