--- a/Mathematik/Sudoku.css
+++ b/Mathematik/Sudoku.css
@@ -18,6 +18,8 @@ h1 {
     text-shadow: 2px 2px 5px black;
     font-size: 4vw;
     text-align: center;
-    padding: 0;
+    padding-top: 2%;
     margin: 0;
 }
+
+p{font-size: x-large;}
