--- a/Startseite/Startseite.css
+++ b/Startseite/Startseite.css
@@ -84,7 +84,7 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    font-size: 2vw;
+    font-size: x-large;
 }
 
 
